fix upload page checkout filesize display layout issue

--- a/src/renderer/assets/css/atom.scss
+++ b/src/renderer/assets/css/atom.scss
@@ -15,6 +15,10 @@
   margin-top: 40px;
 }
 
+.mt60 {
+  margin-top: 60px;
+}
+
 .mt80 {
   margin-top: 80px;
 }
